@@ -1,3 +1,12 @@
+Sun Nov 05 05:22:45 2000  George Lebl <jirka@5z.com>
+
+	* gnome-run.c: warning fixes
+
+	* session.c, panel_config_global.h, basep-widget.c, foobar-widget.c,
+	  gnome-panel-properties.c:  Imlement a normal layer panel setting.
+	  this will be the future default as it seems that almost everybody
+	  hates both always on top and always on bottom settings.
+
 Sat Nov 04 22:59:52 2000  George Lebl <jirka@5z.com>
 
 	* gnome-run.c, foobar-widget.[ch]:  minor cleanup and some evilness
